--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://phd3:5432/gpadmin
+spring.datasource.url=jdbc:postgresql://10.211.55.103:5432/gpadmin
 spring.datasource.username=gpadmin
 spring.datasource.password=gpadmin
 spring.datasource.driver-class-name=org.postgresql.Driver
