--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,9 @@
-group 'com.tygern.phd.sample'
+group 'com.tygern.springphd'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
-
 
 buildscript {
     repositories {
@@ -20,7 +19,6 @@ task wrapper(type: Wrapper) {
     distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
 }
 
-
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -33,7 +31,6 @@ dependencies {
 
     compile("org.springframework.boot:spring-boot-starter-jdbc")
     compile("org.postgresql:postgresql:9.4-1201-jdbc41")
-
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
